--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
                 <li><a href="#">Contacts</a></li>
             </ul>
         </nav>
-        <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-        </ul>
+        <address>
+            <ul>
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+            </ul>
+        </address>
     </header>
     <main>
         <section class="hero">
@@ -65,32 +67,24 @@
             <h2>Our Team</h2>
             <ul>
                 <li>
-                    <a href="#">
-                        <img src="./images/card.jpeg" alt="mark" width="100">
-                        <h3>Mark Guerrero</h3>
-                        <p>Product Designer</p>
-                    </a>
+                    <img src="./images/card.jpeg" alt="mark" width="100">
+                    <h3>Mark Guerrero</h3>
+                    <p>Product Designer</p>
                 </li>
                 <li>
-                    <a href="#">
-                        <img src="./images/card2.jpg" alt="tom" width="100">
-                        <h3>Tom Ford</h3>
-                        <p>Frontend Developer</p>
-                    </a>
+                    <img src="./images/card2.jpg" alt="tom" width="100">
+                    <h3>Tom Ford</h3>
+                    <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <a href="#">
-                        <img src="./images/card3.jpg" alt="camila" width="100">
-                        <h3>Camila Garcia</h3>
-                        <p>Marketing</p>
-                    </a>
+                    <img src="./images/card3.jpg" alt="camila" width="100">
+                    <h3>Camila Garcia</h3>
+                    <p>Marketing</p>
                 </li>
                 <li>
-                    <a href="#">
-                        <img src="./images/card4.jpg" alt="daniel" width="100">
-                        <h3>Daniel Wilson</h3>
-                        <p>UI Designer</p>
-                    </a>
+                    <img src="./images/card4.jpg" alt="daniel" width="100">
+                    <h3>Daniel Wilson</h3>
+                    <p>UI Designer</p>
                 </li>
             </ul>
         </section>
@@ -98,7 +92,7 @@
     <footer>
         <div>
             <a href="#">
-                <span>WEB</span><span>STUDIO</span>
+            <span>WEB</span><span>STUDIO</span>
             </a>
             <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
         </div>
