--- a/index.html
+++ b/index.html
@@ -4,68 +4,80 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Studio</title>
 </head>
 <body>
-    <header>
-        <nav>
-            <a href="#">
-                <span>WEB</span><span>STUDIO</span>
+    <header class="header">
+        <nav class="header_navigation">
+            <a class="logo_styles links" href="#">
+                <span class="web">WEB</span><span>STUDIO</span>
             </a>
-            <ul>
-                <li><a href="#">Studio</a></li>
-                <li><a href="#">Portfolio</a></li>
-                <li><a href="#">Contacts</a></li>
+            <ul class="header_list list">
+                <li class="header_item">
+                    <a class="header_links links" href="./index.html">Studio</a>
+                </li>
+                <li class="header_item">
+                    <a class="header_links links" href="./portfolio.html">Portfolio</a>
+                </li>
+                <li class="header_item">
+                    <a class="header_links links" href="#">Contacts</a>
+                </li>
             </ul>
         </nav>
-        <address>
-            <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        <address class="adress">
+            <ul class="adress_list list">
+                <li>
+                    <a class="address_links links" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                </li>
+                <li>
+                    <a class="address_links links" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                </li>
             </ul>
         </address>
     </header>
     <main>
         <section class="hero">
-                <h1>Effective Solutions <br>for Your Business</h1>
-                <button type="button">Order Service</button>
+                <h1 class="hero_title">Effective Solutions <br>for Your Business</h1>
+                <button type="button" class="button">Order Service</button>
         </section>
-        <section>
-            <h2 hidden>features</h2>
-            <ul>
-                <li>
-                    <h3>Strategy</h3>
-                    <p>Our goal is to identify the business problem to walk away with the perfect and creative
+        <section class="features_section">
+            <h2 class="visually-hidden">features</h2>
+            <ul class="list">
+                <li class="features_list">
+                    <h3 class="sub_title">Strategy</h3>
+                    <p class="description">Our goal is to identify the business problem to walk away with the perfect and creative
                         solution. </p>
                 </li>
                 <li>
-                    <h3>Punctuality</h3>
-                    <p>Bring the key message to the brand's audience for the best price within the shortest
+                    <h3 class="sub_title">Punctuality</h3>
+                    <p class="description">Bring the key message to the brand's audience for the best price within the shortest
                         possible time.</p>
                 </li>
                 <li>
-                    <h3>Diligence</h3>
-                    <p>Research and confirm brands that present the strongest digital growth opportunities and
+                    <h3 class="sub_title">Diligence</h3>
+                    <p class="description">Research and confirm brands that present the strongest digital growth opportunities and
                         minimize risk.</p>
                 </li>
                 <li>
-                    <h3>Technologies</h3>
-                    <p>Design practice focused on digital experiences. We bring forth a deep passion for
+                    <h3 class="sub_title">Technologies</h3>
+                    <p class="description">Design practice focused on digital experiences. We bring forth a deep passion for
                         problem-solving.</p>
                 </li>
             </ul>
         </section>
         <section>
-            <h2>What Are We Doing</h2>
-            <ul>
+            <h2 class="title">What Are We Doing</h2>
+            <ul class="list">
                 <li><img src="./images/img1.jpg" alt="computer" width="360"></li>
                 <li><img src="./images/img2.jpg" alt="phone" width="360"></li>
                 <li><img src="./images/img3.jpg" alt="laptop" width="360"></li>
             </ul>
         </section>
         <section>
-            <h2>Our Team</h2>
-            <ul>
+            <h2 class="title">Our Team</h2>
+            <ul class="list">
                 <li>
                     <img src="./images/card.jpeg" alt="mark" width="264">
                     <h3>Mark Guerrero</h3>
@@ -89,12 +101,12 @@
             </ul>
         </section>
     </main>
-    <footer>
+    <footer class="footer">
         <div>
-            <a href="#">
-            <span>WEB</span><span>STUDIO</span>
+            <a href="#" class="logo_styles links">
+            <span class="web">WEB</span><span class="studio_footer">STUDIO</span>
             </a>
-            <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+            <p class="footer_description">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
         </div>
     </footer>
 </body>
