--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header class="header">
         <nav class="header_navigation">
-            <a class="logo_styles links" href="#">
+            <a class="header_logo links" href="#">
                 <span class="web">WEB</span><span>STUDIO</span>
             </a>
             <ul class="header_list list">
@@ -39,71 +39,77 @@
     </header>
     <main>
         <section class="hero">
-                <h1 class="hero_title">Effective Solutions <br>for Your Business</h1>
+                <h1 class="hero_title">Effective Solutions for Your Business</h1>
                 <button type="button" class="button">Order Service</button>
         </section>
         <section class="features_section">
             <h2 class="visually-hidden">features</h2>
-            <ul class="list">
-                <li class="features_list">
+            <ul class="features_list list">
+                <li class="features_item">
                     <h3 class="sub_title">Strategy</h3>
                     <p class="description">Our goal is to identify the business problem to walk away with the perfect and creative
                         solution. </p>
                 </li>
-                <li>
+                <li class="features_item">
                     <h3 class="sub_title">Punctuality</h3>
                     <p class="description">Bring the key message to the brand's audience for the best price within the shortest
                         possible time.</p>
                 </li>
-                <li>
+                <li class="features_item">
                     <h3 class="sub_title">Diligence</h3>
                     <p class="description">Research and confirm brands that present the strongest digital growth opportunities and
                         minimize risk.</p>
                 </li>
-                <li>
+                <li class="features_item">
                     <h3 class="sub_title">Technologies</h3>
                     <p class="description">Design practice focused on digital experiences. We bring forth a deep passion for
                         problem-solving.</p>
                 </li>
             </ul>
         </section>
-        <section>
+        <section class="services_section">
             <h2 class="title">What Are We Doing</h2>
-            <ul class="list">
-                <li><img src="./images/img1.jpg" alt="computer" width="360"></li>
-                <li><img src="./images/img2.jpg" alt="phone" width="360"></li>
-                <li><img src="./images/img3.jpg" alt="laptop" width="360"></li>
+            <ul class="services_list list">
+                <li class="services_item">
+                    <img src="./images/img1.jpg" alt="computer" width="360">
+                </li>
+                <li class="services_item">
+                    <img src="./images/img2.jpg" alt="phone" width="360">
+                </li>
+                <li class="services_item">
+                    <img src="./images/img3.jpg" alt="laptop" width="360">
+                </li>
             </ul>
         </section>
-        <section>
+        <section class="team">
             <h2 class="title">Our Team</h2>
-            <ul class="list">
-                <li>
+            <ul class="team_list list">
+                <li class="team_item">
                     <img src="./images/card.jpeg" alt="mark" width="264">
-                    <h3>Mark Guerrero</h3>
-                    <p>Product Designer</p>
+                    <h3 class="sub_title">Mark Guerrero</h3>
+                    <p class="description">Product Designer</p>
                 </li>
-                <li>
+                <li class="team_item">
                     <img src="./images/card2.jpg" alt="tom" width="264">
-                    <h3>Tom Ford</h3>
-                    <p>Frontend Developer</p>
+                    <h3 class="sub_title">Tom Ford</h3>
+                    <p class="description">Frontend Developer</p>
                 </li>
-                <li>
+                <li class="team_item">
                     <img src="./images/card3.jpg" alt="camila" width="264">
-                    <h3>Camila Garcia</h3>
-                    <p>Marketing</p>
+                    <h3 class="sub_title">Camila Garcia</h3>
+                    <p class="description">Marketing</p>
                 </li>
-                <li>
+                <li class="team_item">
                     <img src="./images/card4.jpg" alt="daniel" width="264">
-                    <h3>Daniel Wilson</h3>
-                    <p>UI Designer</p>
+                    <h3 class="sub_title">Daniel Wilson</h3>
+                    <p class="description">UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
     <footer class="footer">
         <div>
-            <a href="#" class="logo_styles links">
+            <a href="#" class="header_logo links">
             <span class="web">WEB</span><span class="studio_footer">STUDIO</span>
             </a>
             <p class="footer_description">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
