--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
 <body>
     <header class="header">
         <nav class="header_navigation">
-            <a href="#" class="logo_styles links">
+            <a href="#" class="header_logo links">
                 <span class="web logo_link">WEB</span><span class="studio">STUDIO</span>
             </a>
             <ul class="header_list list">
@@ -34,27 +34,25 @@
         </address>
     </header>
     <main>
-        <section class="hero-portfolio">
+        <section class="portfolio">
             <h1 class="visually-hidden">Buttons</h1>
-            <ul class="btn_list">
-                <li class="list">
+            <ul class="btn_list list">
+                <li class="btn_item">
                     <button type="button" class="buttons">All</button>
                 </li>
-                <li class="list">
+                <li class="btn_item">
                     <button type="button" class="buttons">Web Site</button>
                 </li>
-                <li class="list">
+                <li class="btn_item">
                     <button type="button" class="buttons">App</button>
                 </li>
-                <li class="list">
+                <li class="btn_item">
                     <button type="button" class="buttons">Design</button>
                 </li>
-                <li class="list">
+                <li class="btn_item">
                     <button type="button" class="buttons">Marketing</button>
                 </li>
             </ul>
-        </section>
-        <section class="photo_section">
             <h2 class="visually-hidden">Cards</h2>
             <ul class="photo_list">
                 <li class="photo_item list">
@@ -107,7 +105,7 @@
     </main>
     <footer class="footer">
         <div class="container">
-            <a href="#" class="logo_styles links">
+            <a href="#" class="header_logo links">
                 <span class="web">WEB</span><span class="studio_footer">STUDIO</span>
             </a>
             <p class="footer_description">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
