--- a/index.html
+++ b/index.html
@@ -5,111 +5,127 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
+    <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
     <title>Studio</title>
 </head>
 <body>
     <header class="header">
-        <nav class="header_navigation">
-            <a class="header_logo links" href="#">
-                <span class="web">WEB</span><span>STUDIO</span>
-            </a>
-            <ul class="header_list list">
-                <li class="header_item">
-                    <a class="header_links links" href="./index.html">Studio</a>
-                </li>
-                <li class="header_item">
-                    <a class="header_links links" href="./portfolio.html">Portfolio</a>
-                </li>
-                <li class="header_item">
-                    <a class="header_links links" href="#">Contacts</a>
-                </li>
-            </ul>
-        </nav>
-        <address class="adress">
-            <ul class="adress_list list">
-                <li>
-                    <a class="address_links links" href="mailto:info@devstudio.com">info@devstudio.com</a>
-                </li>
-                <li>
-                    <a class="address_links links" href="tel:+110001111111">+11 (000) 111-11-11</a>
-                </li>
-            </ul>
-        </address>
+        <div class="container header_container">
+            <nav class="header_navigation">
+                <a href="#" class="header_logo">
+                    <span class="web logo_link">WEB</span><span class="studio">STUDIO</span>
+                </a>
+                <ul class="header_list">
+                    <li class="header_item">
+                        <a href="./index.html" class="header_links">Studio</a>
+                    </li>
+                    <li class="header_item">
+                        <a href="./portfolio.html" class="header_links">Portfolio</a>
+                    </li>
+                    <li class="header_item">
+                        <a href="#" class="header_links">Contacts</a>
+                    </li>
+                </ul>
+            </nav>
+            <address class="address">
+                <ul class="header_list">
+                    <li><a href="mailto:info@devstudio.com" class="address_links">info@devstudio.com</a></li>
+                    <li><a href="tel:+110001111111" class="address_links">+11 (000) 111-11-11</a></li>
+                </ul>
+            </address>
+        </div>
     </header>
     <main>
         <section class="hero">
+            <div class="container">
                 <h1 class="hero_title">Effective Solutions for Your Business</h1>
                 <button type="button" class="button">Order Service</button>
+            </div>
         </section>
-        <section class="features_section">
-            <h2 class="visually-hidden">features</h2>
-            <ul class="features_list list">
-                <li class="features_item">
-                    <h3 class="sub_title">Strategy</h3>
-                    <p class="description">Our goal is to identify the business problem to walk away with the perfect and creative
-                        solution. </p>
-                </li>
-                <li class="features_item">
-                    <h3 class="sub_title">Punctuality</h3>
-                    <p class="description">Bring the key message to the brand's audience for the best price within the shortest
-                        possible time.</p>
-                </li>
-                <li class="features_item">
-                    <h3 class="sub_title">Diligence</h3>
-                    <p class="description">Research and confirm brands that present the strongest digital growth opportunities and
-                        minimize risk.</p>
-                </li>
-                <li class="features_item">
-                    <h3 class="sub_title">Technologies</h3>
-                    <p class="description">Design practice focused on digital experiences. We bring forth a deep passion for
-                        problem-solving.</p>
-                </li>
-            </ul>
+        <section class="features">
+            <div class="container">
+                <h2 class="visually-hidden">features</h2>
+                <ul class="features_list">
+                    <li class="features_item">
+                        <h3 class="sub_title">Strategy</h3>
+                        <p class="description">Our goal is to identify the business problem to walk away with the perfect and creative
+                            solution. </p>
+                    </li>
+                    <li class="features_item">
+                        <h3 class="sub_title">Punctuality</h3>
+                        <p class="description">Bring the key message to the brand's audience for the best price within the shortest
+                            possible time.</p>
+                    </li>
+                    <li class="features_item">
+                        <h3 class="sub_title">Diligence</h3>
+                        <p class="description">Research and confirm brands that present the strongest digital growth opportunities and
+                            minimize risk.</p>
+                    </li>
+                    <li class="features_item">
+                        <h3 class="sub_title">Technologies</h3>
+                        <p class="description">Design practice focused on digital experiences. We bring forth a deep passion for
+                            problem-solving.</p>
+                    </li>
+                </ul>
+            </div >
         </section>
-        <section class="services_section">
-            <h2 class="title">What Are We Doing</h2>
-            <ul class="services_list list">
-                <li class="services_item">
-                    <img src="./images/img1.jpg" alt="computer" width="360">
-                </li>
-                <li class="services_item">
-                    <img src="./images/img2.jpg" alt="phone" width="360">
-                </li>
-                <li class="services_item">
-                    <img src="./images/img3.jpg" alt="laptop" width="360">
-                </li>
-            </ul>
+        <section class="services">
+            <div class="container">
+                <h2 class="service_title title">What Are We Doing</h2>
+                <ul class="services_list">
+                    <li class="services_item">
+                        <img src="./images/img1.jpg" alt="computer">
+                    </li>
+                    <li class="services_item">
+                        <img src="./images/img2.jpg" alt="phone">
+                    </li>
+                    <li class="services_item">
+                        <img src="./images/img3.jpg" alt="laptop">
+                    </li>
+                </ul>
+            </div >
         </section>
         <section class="team">
-            <h2 class="title">Our Team</h2>
-            <ul class="team_list list">
-                <li class="team_item">
-                    <img src="./images/card.jpeg" alt="mark" width="264">
-                    <h3 class="sub_title">Mark Guerrero</h3>
-                    <p class="description">Product Designer</p>
-                </li>
-                <li class="team_item">
-                    <img src="./images/card2.jpg" alt="tom" width="264">
-                    <h3 class="sub_title">Tom Ford</h3>
-                    <p class="description">Frontend Developer</p>
-                </li>
-                <li class="team_item">
-                    <img src="./images/card3.jpg" alt="camila" width="264">
-                    <h3 class="sub_title">Camila Garcia</h3>
-                    <p class="description">Marketing</p>
-                </li>
-                <li class="team_item">
-                    <img src="./images/card4.jpg" alt="daniel" width="264">
-                    <h3 class="sub_title">Daniel Wilson</h3>
-                    <p class="description">UI Designer</p>
-                </li>
-            </ul>
+            <div class="container">
+                <h2 class="team_title title">Our Team</h2>
+                <ul class="team_list">
+                    <li class="team_item">
+                        <img src="./images/card.jpeg" alt="mark">
+                        <div class="team_text">
+                            <h3 class="sub_title">Mark Guerrero</h3>
+                            <p class="description">Product Designer</p>
+                        </div>
+                    </li>
+                    <li class="team_item">
+                        <img src="./images/card2.jpg" alt="tom">
+                        <div class="team_text">
+                            <h3 class="sub_title">Tom Ford</h3>
+                            <p class="description">Frontend Developer</p>
+                        </div>
+                    </li>
+                    <li class="team_item">
+                        <img src="./images/card3.jpg" alt="camila">
+                        <div class="team_text">
+                            <h3 class="sub_title">Camila Garcia</h3>
+                            <p class="description">Marketing</p>
+                        </div>
+                    </li>
+                    <li class="team_item">
+                        <img src="./images/card4.jpg" alt="daniel">
+                        <div class="team_text">
+                            <h3 class="sub_title team_margin">Daniel Wilson</h3>
+                            <p class="description">UI Designer</p>
+                        </div>
+                    </li>
+                </ul>
+            </div >
         </section>
     </main>
     <footer class="footer">
-        <div>
-            <a href="#" class="header_logo links">
+        <div class="container">
+            <a href="#" class="header_logo">
             <span class="web">WEB</span><span class="studio_footer">STUDIO</span>
             </a>
             <p class="footer_description">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
