--- a/portfolio.html
+++ b/portfolio.html
@@ -5,107 +5,131 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
+    <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
     <title>Portfolio</title>
 </head>
 <body>
     <header class="header">
-        <nav class="header_navigation">
-            <a href="#" class="header_logo links">
-                <span class="web logo_link">WEB</span><span class="studio">STUDIO</span>
-            </a>
-            <ul class="header_list list">
-                <li class="header_item">
-                    <a href="./index.html" class="header_links links">Studio</a>
-                </li>
-                <li class="header_item">
-                    <a href="./portfolio.html" class="header_links links">Portfolio</a>
-                </li>
-                <li class="header_item">
-                    <a href="#" class="header_links links">Contacts</a>
-                </li>
-            </ul>
-        </nav>
-        <address class="address">
-            <ul class="header_list list">
-                <li><a href="mailto:info@devstudio.com" class="address_links links">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111" class="address_links links">+11 (000) 111-11-11</a></li>
-            </ul>
-        </address>
+        <div class="container header_container">
+            <nav class="header_navigation">
+                <a href="#" class="header_logo">
+                    <span class="web logo_link">WEB</span><span class="studio">STUDIO</span>
+                </a>
+                <ul class="header_list">
+                    <li class="header_item">
+                        <a href="./index.html" class="header_links">Studio</a>
+                    </li>
+                    <li class="header_item">
+                        <a href="./portfolio.html" class="header_links">Portfolio</a>
+                    </li>
+                    <li class="header_item">
+                        <a href="#" class="header_links">Contacts</a>
+                    </li>
+                </ul>
+            </nav>
+            <address class="address">
+                <ul class="header_list">
+                    <li><a href="mailto:info@devstudio.com" class="address_links">info@devstudio.com</a></li>
+                    <li><a href="tel:+110001111111" class="address_links">+11 (000) 111-11-11</a></li>
+                </ul>
+            </address>
+        </div>
     </header>
     <main>
         <section class="portfolio">
-            <h1 class="visually-hidden">Buttons</h1>
-            <ul class="btn_list list">
-                <li class="btn_item">
-                    <button type="button" class="buttons">All</button>
-                </li>
-                <li class="btn_item">
-                    <button type="button" class="buttons">Web Site</button>
-                </li>
-                <li class="btn_item">
-                    <button type="button" class="buttons">App</button>
-                </li>
-                <li class="btn_item">
-                    <button type="button" class="buttons">Design</button>
-                </li>
-                <li class="btn_item">
-                    <button type="button" class="buttons">Marketing</button>
-                </li>
-            </ul>
-            <h2 class="visually-hidden">Cards</h2>
-            <ul class="photo_list">
-                <li class="photo_item list">
-                    <img src="./images/second-hw-img/img1.jpg" alt="banking" width="360">
-                    <h3 class="sub_title">Banking App Interface Concept</h3>
-                    <p class="description">App</p>
-                </li>
-                <li class="photo_item list">
-                    <img src="./images/second-hw-img/img2.jpg" alt="payment" width="360">
-                    <h3 class="sub_title">Cashless Payment</h3>
-                    <p class="description">Marketing</p>
-                </li>
-                <li class="photo_item list">
-                    <img src="./images/second-hw-img/img3.jpg" alt="meditation" width="360">
-                    <h3 class="sub_title">Meditaion App</h3>
-                    <p class="description">App</p>
-                </li>
-                <li class="photo_item list">
-                    <img src="./images/second-hw-img/img4.jpg" alt="taxi" width="360">
-                    <h3 class="sub_title">Taxi Service</h3>
-                    <p class="description">Marketing</p>
-                </li>
-                <li class="photo_item list">
-                    <img src="./images/second-hw-img/img5.jpg" alt="illustrations" width="360">
-                    <h3 class="sub_title">Screen Illustrations</h3>
-                    <p class="description">Design</p>
-                </li>
-                <li class="photo_item list">
-                    <img src="./images/second-hw-img/img6.jpg" alt="Courses" width="360">
-                    <h3 class="sub_title">Online Courses</h3>
-                    <p class="description">Marketing</p>
-                </li>
-                <li class="photo_item list">
-                    <img src="./images/second-hw-img/img7.jpg" alt="instagram" width="360">
-                    <h3 class="sub_title">Instagram Stories Concept</h3>
-                    <p class="description">Design</p>
-                </li>
-                <li class="photo_item list">
-                    <img src="./images/second-hw-img/img8.jpg" alt="food" width="360">
-                    <h3 class="sub_title">Organic Food</h3>
-                    <p class="description">Web Site</p>
-                </li>
-                <li class="photo_item list">
-                    <img src="./images/second-hw-img/img9.jpg" alt="coffee" width="360">
-                    <h3 class="sub_title">Fresh Coffee</h3>
-                    <p class="description">Web Site</p>
-                </li>
-            </ul>
+            <div class="container">
+                <h1 class="visually-hidden">Buttons</h1>
+                <ul class="btn_list">
+                    <li class="btn_item">
+                        <button type="button" class="buttons">All</button>
+                    </li>
+                    <li class="btn_item">
+                        <button type="button" class="buttons">Web Site</button>
+                    </li>
+                    <li class="btn_item">
+                        <button type="button" class="buttons">App</button>
+                    </li>
+                    <li class="btn_item">
+                        <button type="button" class="buttons">Design</button>
+                    </li>
+                    <li class="btn_item">
+                        <button type="button" class="buttons">Marketing</button>
+                    </li>
+                </ul>
+                <h2 class="visually-hidden">Cards</h2>
+                <ul class="photo_list">
+                    <li class="photo_item">
+                        <img src="./images/second-hw-img/img1.jpg" alt="banking">
+                        <div class="photo_text">
+                            <h3 class="sub_title">Banking App Interface Concept</h3>
+                            <p class="description">App</p>
+                        </div >
+                    </li>
+                    <li class="photo_item">
+                        <img src="./images/second-hw-img/img2.jpg" alt="payment">
+                        <div class="photo_text">
+                            <h3 class="sub_title">Cashless Payment</h3>
+                            <p class="description">Marketing</p>
+                        </div>
+                    </li>
+                    <li class="photo_item">
+                        <img src="./images/second-hw-img/img3.jpg" alt="meditation">
+                        <div class="photo_text">
+                            <h3 class="sub_title">Meditaion App</h3>
+                            <p class="description">App</p>
+                        </div>
+                    </li>
+                    <li class="photo_item">
+                        <img src="./images/second-hw-img/img4.jpg" alt="taxi">
+                        <div class="photo_text">
+                            <h3 class="sub_title">Taxi Service</h3>
+                            <p class="description">Marketing</p>
+                        </div>
+                    </li>
+                    <li class="photo_item">
+                        <img src="./images/second-hw-img/img5.jpg" alt="illustrations">
+                        <div class="photo_text">
+                            <h3 class="sub_title">Screen Illustrations</h3>
+                            <p class="description">Design</p>
+                        </div>
+                    </li>
+                    <li class="photo_item">
+                        <img src="./images/second-hw-img/img6.jpg" alt="Courses">
+                        <div class="photo_text">
+                            <h3 class="sub_title">Online Courses</h3>
+                            <p class="description">Marketing</p>
+                        </div >
+                    </li>
+                    <li class="photo_item">
+                        <img src="./images/second-hw-img/img7.jpg" alt="instagram">
+                        <div class="photo_text">
+                            <h3 class="sub_title">Instagram Stories Concept</h3>
+                            <p class="description">Design</p>
+                        </div>
+                    </li>
+                    <li class="photo_item">
+                        <img src="./images/second-hw-img/img8.jpg" alt="food">
+                        <div class="photo_text">
+                            <h3 class="sub_title">Organic Food</h3>
+                            <p class="description">Web Site</p>
+                        </div>
+                    </li>
+                    <li class="photo_item">
+                        <img src="./images/second-hw-img/img9.jpg" alt="coffee">
+                        <div class="photo_text">
+                            <h3 class="sub_title">Fresh Coffee</h3>
+                            <p class="description">Web Site</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
         </section>
     </main>
     <footer class="footer">
         <div class="container">
-            <a href="#" class="header_logo links">
+            <a href="#" class="header_logo">
                 <span class="web">WEB</span><span class="studio_footer">STUDIO</span>
             </a>
             <p class="footer_description">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
