index's svg added

--- a/index.html
+++ b/index.html
@@ -49,21 +49,41 @@
                 <h2 class="visually-hidden">features</h2>
                 <ul class="features_list">
                     <li class="features_item">
+                        <div class="features_item_icon">
+                            <svg class="features_icon" width="64" height="64">
+                                <use href="./images/symbol-defs.svg#icon-antenna-1"></use>
+                            </svg>
+                        </div>
                         <h3 class="sub_title">Strategy</h3>
                         <p class="description">Our goal is to identify the business problem to walk away with the perfect and creative
                             solution. </p>
                     </li>
                     <li class="features_item">
+                        <div class="features_item_icon">
+                            <svg class="features_icon" width="64" height="64">
+                                <use href="./images/symbol-defs.svg#icon-clock-1"></use>
+                            </svg>
+                        </div>
                         <h3 class="sub_title">Punctuality</h3>
                         <p class="description">Bring the key message to the brand's audience for the best price within the shortest
                             possible time.</p>
                     </li>
                     <li class="features_item">
+                        <div class="features_item_icon">
+                            <svg class="features_icon" width="64" height="64">
+                                <use href="./images/symbol-defs.svg#icon-diagram-1"></use>
+                            </svg>
+                        </div>
                         <h3 class="sub_title">Diligence</h3>
                         <p class="description">Research and confirm brands that present the strongest digital growth opportunities and
                             minimize risk.</p>
                     </li>
                     <li class="features_item">
+                        <div class="features_item_icon">
+                            <svg class="features_icon" width="64" height="64">
+                                <use href="./images/symbol-defs.svg#icon-astronaut-1"></use>
+                            </svg>
+                        </div>
                         <h3 class="sub_title">Technologies</h3>
                         <p class="description">Design practice focused on digital experiences. We bring forth a deep passion for
                             problem-solving.</p>
@@ -76,13 +96,13 @@
                 <h2 class="service_title title">What Are We Doing</h2>
                 <ul class="services_list">
                     <li class="services_item">
-                        <img src="./images/img1.jpg" alt="computer">
+                        <img src="./images/services/img1.jpg" alt="computer">
                     </li>
                     <li class="services_item">
-                        <img src="./images/img2.jpg" alt="phone">
+                        <img src="./images/services/img2.jpg" alt="phone">
                     </li>
                     <li class="services_item">
-                        <img src="./images/img3.jpg" alt="laptop">
+                        <img src="./images/services/img3.jpg" alt="laptop">
                     </li>
                 </ul>
             </div >
@@ -92,31 +112,151 @@
                 <h2 class="team_title title">Our Team</h2>
                 <ul class="team_list">
                     <li class="team_item">
-                        <img src="./images/card.jpeg" alt="mark">
+                        <img src="./images/team_cards/card.jpeg" alt="mark">
                         <div class="team_text">
                             <h3 class="sub_title">Mark Guerrero</h3>
                             <p class="description">Product Designer</p>
+                            <ul class="social_list">
+                                <li class="team_social_link">
+                                    <a href="" class="social_link">
+                                        <svg class="team_social_icon">
+                                            <use href="./images/symbol-defs.svg#icon-team_cards1"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team_social_link">
+                                    <a href="" class="social_link">
+                                        <svg class="team_social_icon">
+                                            <use href="./images/symbol-defs.svg#icon-team_cards2"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team_social_link">
+                                    <a href="" class="social_link">
+                                        <svg class="team_social_icon">
+                                            <use href="./images/symbol-defs.svg#icon-team_cards3"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team_social_link">
+                                    <a href="" class="social_link">
+                                        <svg class="team_social_icon">
+                                            <use href="./images/symbol-defs.svg#icon-team_cards4"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="team_item">
-                        <img src="./images/card2.jpg" alt="tom">
+                        <img src="./images/team_cards/card2.jpg" alt="tom">
                         <div class="team_text">
                             <h3 class="sub_title">Tom Ford</h3>
                             <p class="description">Frontend Developer</p>
+                            <ul class="social_list">
+                                <li class="team_social_link">
+                                    <a href="" class="social_link">
+                                        <svg class="team_social_icon">
+                                            <use href="./images/symbol-defs.svg#icon-team_cards1"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team_social_link">
+                                    <a href="" class="social_link">
+                                        <svg class="team_social_icon">
+                                            <use href="./images/symbol-defs.svg#icon-team_cards2"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team_social_link">
+                                    <a href="" class="social_link">
+                                        <svg class="team_social_icon">
+                                            <use href="./images/symbol-defs.svg#icon-team_cards3"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team_social_link">
+                                    <a href="" class="social_link">
+                                        <svg class="team_social_icon">
+                                            <use href="./images/symbol-defs.svg#icon-team_cards4"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="team_item">
-                        <img src="./images/card3.jpg" alt="camila">
+                        <img src="./images/team_cards/card3.jpg" alt="camila">
                         <div class="team_text">
                             <h3 class="sub_title">Camila Garcia</h3>
                             <p class="description">Marketing</p>
+                            <ul class="social_list">
+                                <li class="team_social_link">
+                                    <a href="" class="social_link">
+                                        <svg class="team_social_icon">
+                                            <use href="./images/symbol-defs.svg#icon-team_cards1"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team_social_link">
+                                    <a href="" class="social_link">
+                                        <svg class="team_social_icon">
+                                            <use href="./images/symbol-defs.svg#icon-team_cards2"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team_social_link">
+                                    <a href="" class="social_link">
+                                        <svg class="team_social_icon">
+                                            <use href="./images/symbol-defs.svg#icon-team_cards3"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team_social_link">
+                                    <a href="" class="social_link">
+                                        <svg class="team_social_icon">
+                                            <use href="./images/symbol-defs.svg#icon-team_cards4"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="team_item">
-                        <img src="./images/card4.jpg" alt="daniel">
+                        <img src="./images/team_cards/card4.jpg" alt="daniel">
                         <div class="team_text">
                             <h3 class="sub_title team_margin">Daniel Wilson</h3>
                             <p class="description">UI Designer</p>
+                            <ul class="social_list">
+                                <li class="team_social_link">
+                                    <a href="" class="social_link">
+                                        <svg class="team_social_icon">
+                                            <use href="./images/symbol-defs.svg#icon-team_cards1"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team_social_link">
+                                    <a href="" class="social_link">
+                                        <svg class="team_social_icon">
+                                            <use href="./images/symbol-defs.svg#icon-team_cards2"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team_social_link">
+                                    <a href="" class="social_link">
+                                        <svg class="team_social_icon">
+                                            <use href="./images/symbol-defs.svg#icon-team_cards3"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team_social_link">
+                                    <a href="" class="social_link">
+                                        <svg class="team_social_icon">
+                                            <use href="./images/symbol-defs.svg#icon-team_cards4"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                 </ul>
