icons photo-cards

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         </section>
         <section class="services">
             <div class="container">
-                <h2 class="service_title title">What Are We Doing</h2>
+                <h2 class="title">What Are We Doing</h2>
                 <ul class="services_list">
                     <li class="services_item">
                         <img src="./images/services/img1.jpg" alt="computer">
@@ -109,7 +109,7 @@
         </section>
         <section class="team">
             <div class="container">
-                <h2 class="team_title title">Our Team</h2>
+                <h2 class="title">Our Team</h2>
                 <ul class="team_list">
                     <li class="team_item">
                         <img src="./images/team_cards/card.jpeg" alt="mark">
@@ -225,7 +225,7 @@
                     <li class="team_item">
                         <img src="./images/team_cards/card4.jpg" alt="daniel">
                         <div class="team_text">
-                            <h3 class="sub_title team_margin">Daniel Wilson</h3>
+                            <h3 class="sub_title">Daniel Wilson</h3>
                             <p class="description">UI Designer</p>
                             <ul class="social_list">
                                 <li class="team_social_link">
@@ -262,13 +262,97 @@
                 </ul>
             </div >
         </section>
+        <section class="customers">
+            <div class="container">
+                <h2 class="customers_title">Customers</h2>
+                <ul class="customers_list">
+                    <li class="customers_item">
+                        <a href="" class="customers_link">
+                            <svg class="customers_icon" width="104" height="56">
+                                <use href="./images/symbol-defs.svg#icon-costumer1"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="customers_item">
+                        <a href="" class="customers_link">
+                            <svg class="customers_icon" width="104" height="56">
+                                <use href="./images/symbol-defs.svg#icon-costumer2"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="customers_item">
+                        <a href="" class="customers_link">
+                            <svg class="customers_icon" width="104" height="56">
+                                <use href="./images/symbol-defs.svg#icon-costumer3"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="customers_item">
+                        <a href="" class="customers_link">
+                        <svg class="customers_icon" width="104" height="56">
+                            <use href="./images/symbol-defs.svg#icon-costumer4"></use>
+                        </svg>
+                    </a>
+                    </li>
+                    <li class="customers_item">
+                        <a href="" class="customers_link">
+                            <svg class="customers_icon" width="104" height="56">
+                                <use href="./images/symbol-defs.svg#icon-costumer5"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="customers_item">
+                        <a href="" class="customers_link">
+                            <svg class="customers_icon" width="104" height="56">
+                                <use href="./images/symbol-defs.svg#icon-costumer6"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </section>
     </main>
-    <footer class="footer">
-        <div class="container">
-            <a href="#" class="header_logo">
-            <span class="web">WEB</span><span class="studio_footer">STUDIO</span>
-            </a>
-            <p class="footer_description">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    <footer class="footer_section">
+        <div class="container footer_flex_container">
+            <div class="footer_logo_container">
+                <a href="#" class="header_logo">
+                    <span class="web">WEB</span><span class="studio_footer">STUDIO</span>
+                    </a>
+                    <p class="footer_description">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+            </div >
+            <div class="social_media">
+                <p class="social_media_text">Social media</p>
+                <ul class="social_media_list">
+                    <li class="social_media_item">
+                        <a href="" class="social_media_link">
+                            <svg width="24" height="24">
+                                <use href="./images/symbol-defs.svg#icon-footer_instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social_media_item">
+                        <a href="" class="social_media_link">
+                            <svg width="24" height="24">
+                                <use href="./images/symbol-defs.svg#icon-footer_twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social_media_item">
+                        <a href="" class="social_media_link">
+                            <svg width="24" height="24">
+                                <use href="./images/symbol-defs.svg#icon-footer_facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social_media_item">
+                        <a href="" class="social_media_link">
+                            <svg width="24" height="24">
+                                <use href="./images/symbol-defs.svg#icon-footer_linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </footer>
 </body>
