--- a/portfolio.html
+++ b/portfolio.html
@@ -40,7 +40,7 @@
     <main>
         <section class="portfolio">
             <div class="container">
-                <h1 class="visually-hidden">Buttons</h1>
+                <h1 class="visually-hidden">Portfolio</h1>
                 <ul class="btn_list">
                     <li class="btn_item">
                         <button type="button" class="buttons">All</button>
@@ -58,82 +58,137 @@
                         <button type="button" class="buttons">Marketing</button>
                     </li>
                 </ul>
-                <h2 class="visually-hidden">Cards</h2>
                 <ul class="photo_list">
                     <li class="photo_item">
-                        <img src="./images/second-hw-img/img1.jpg" alt="banking">
-                        <div class="photo_text">
-                            <h3 class="sub_title">Banking App Interface Concept</h3>
-                            <p class="description">App</p>
-                        </div >
+                        <a href="" class="photo-item-link">
+                            <img src="./images/portfolio_cards/img1.jpg" alt="banking">
+                            <div class="photo_notes">
+                                <h2 class="sub_title">Banking App Interface Concept</h2>
+                                <p class="description">App</p>
+                            </div >
+                        </a >
                     </li>
                     <li class="photo_item">
-                        <img src="./images/second-hw-img/img2.jpg" alt="payment">
-                        <div class="photo_text">
-                            <h3 class="sub_title">Cashless Payment</h3>
-                            <p class="description">Marketing</p>
-                        </div>
+                        <a href="" class="photo-item-link">
+                            <img src="./images/portfolio_cards/img2.jpg" alt="payment" width="360" height="300" class="no-gap">
+                            <div class="photo_notes">
+                                <h2 class="sub_title">Cashless Payment</h2>
+                                <p class="description">Marketing</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="photo_item">
-                        <img src="./images/second-hw-img/img3.jpg" alt="meditation">
-                        <div class="photo_text">
-                            <h3 class="sub_title">Meditaion App</h3>
-                            <p class="description">App</p>
-                        </div>
+                        <a href="" class="photo-item-link">
+                            <img src="./images/portfolio_cards/img3.jpg" alt="meditation" width="360" height="300" class="no-gap">
+                            <div class="photo_notes">
+                                <h2 class="sub_title">Meditaion App</h2>
+                                <p class="description">App</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="photo_item">
-                        <img src="./images/second-hw-img/img4.jpg" alt="taxi">
-                        <div class="photo_text">
-                            <h3 class="sub_title">Taxi Service</h3>
-                            <p class="description">Marketing</p>
-                        </div>
+                        <a href="" class="photo-item-link">
+                            <img src="./images/portfolio_cards/img4.jpg" alt="taxi" width="360" height="300" class="no-gap">
+                            <div class="photo_notes">
+                                <h2 class="sub_title">Taxi Service</h2>
+                                <p class="description">Marketing</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="photo_item">
-                        <img src="./images/second-hw-img/img5.jpg" alt="illustrations">
-                        <div class="photo_text">
-                            <h3 class="sub_title">Screen Illustrations</h3>
-                            <p class="description">Design</p>
-                        </div>
+                        <a href="" class="photo-item-link">
+                            <img src="./images/portfolio_cards/img5.jpg" alt="illustrations" width="360" height="300"
+                            class="no-gap">
+                            <div class="photo_notes">
+                                <h2 class="sub_title">Screen Illustrations</h2>
+                                <p class="description">Design</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="photo_item">
-                        <img src="./images/second-hw-img/img6.jpg" alt="Courses">
-                        <div class="photo_text">
-                            <h3 class="sub_title">Online Courses</h3>
-                            <p class="description">Marketing</p>
-                        </div >
+                        <a href="" class="photo-item-link">
+                            <img src="./images/portfolio_cards/img6.jpg" alt="Courses" width="360" height="300" class="no-gap">
+                            <div class="photo_notes">
+                                <h2 class="sub_title">Online Courses</h2>
+                                <p class="description">Marketing</p>
+                            </div >
+                        </a class="photo-item-link">
                     </li>
                     <li class="photo_item">
-                        <img src="./images/second-hw-img/img7.jpg" alt="instagram">
-                        <div class="photo_text">
-                            <h3 class="sub_title">Instagram Stories Concept</h3>
-                            <p class="description">Design</p>
-                        </div>
+                        <a href="" class="photo-item-link">
+                            <img src="./images/portfolio_cards/img7.jpg" alt="instagram" width="360" height="300" class="no-gap">
+                            <div class="photo_notes">
+                                <h2 class="sub_title">Instagram Stories Concept</h2>
+                                <p class="description">Design</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="photo_item">
-                        <img src="./images/second-hw-img/img8.jpg" alt="food">
-                        <div class="photo_text">
-                            <h3 class="sub_title">Organic Food</h3>
-                            <p class="description">Web Site</p>
-                        </div>
+                        <a href="" class="photo-item-link">
+                            <img src="./images/portfolio_cards/img8.jpg" alt="food" width="360" height="300" class="no-gap">
+                            <div class="photo_notes">
+                                <h2 class="sub_title">Organic Food</h2>
+                                <p class="description">Web Site</p>
+                            </div>
+                        </a >
                     </li>
                     <li class="photo_item">
-                        <img src="./images/second-hw-img/img9.jpg" alt="coffee">
-                        <div class="photo_text">
-                            <h3 class="sub_title">Fresh Coffee</h3>
-                            <p class="description">Web Site</p>
-                        </div>
+                        <a href="" class="photo-item-link">
+                            <img src="./images/portfolio_cards/img9.jpg" alt="coffee" width="360" height="300" class="no-gap">
+                            <div class="photo_notes">
+                                <h2 class="sub_title">Fresh Coffee</h2>
+                                <p class="description">Web Site</p>
+                            </div>
+                        </a>
                     </li>
                 </ul>
             </div>
         </section>
     </main>
-    <footer class="footer">
-        <div class="container">
-            <a href="#" class="header_logo">
-                <span class="web">WEB</span><span class="studio_footer">STUDIO</span>
-            </a>
-            <p class="footer_description">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    <footer class="footer_section">
+        <div class="container footer_flex_container">
+            <div class="footer_logo_container">
+                <a href="#" class="header_logo">
+                    <span class="web">WEB</span><span class="studio_footer">STUDIO</span>
+                    </a>
+                    <p class="footer_description">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+            </div >
+            <div class="social_media">
+                <p class="social_media_text">Social media</p>
+                <ul class="social_media_list">
+                    <li class="social_media_item">
+                        <a href="" class="social_media_link">
+                            <svg width="24" height="24">
+                                <use href="./images/symbol-defs.svg#icon-footer_instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social_media_item">
+                        <a href="" class="social_media_link">
+                            <svg width="24" height="24">
+                                <use href="./images/symbol-defs.svg#icon-footer_twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social_media_item">
+                        <a href="" class="social_media_link">
+                            <svg width="24" height="24">
+                                <use href="./images/symbol-defs.svg#icon-footer_facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social_media_item">
+                        <a href="" class="social_media_link">
+                            <svg width="24" height="24">
+                                <use href="./images/symbol-defs.svg#icon-footer_linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </footer>
+</body>
+</html>
 </body>
 </html>
