rework for icons, shadows, and descriptions

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
-    <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
     <title>Studio</title>
 </head>
@@ -51,7 +50,7 @@
                     <li class="features_item">
                         <div class="features_item_icon">
                             <svg class="features_icon" width="64" height="64">
-                                <use href="./images/symbol-defs.svg#icon-antenna-1"></use>
+                                <use href="./images/symbol-defs.svg#icon-antenna"></use>
                             </svg>
                         </div>
                         <h3 class="sub_title">Strategy</h3>
@@ -61,7 +60,7 @@
                     <li class="features_item">
                         <div class="features_item_icon">
                             <svg class="features_icon" width="64" height="64">
-                                <use href="./images/symbol-defs.svg#icon-clock-1"></use>
+                                <use href="./images/symbol-defs.svg#icon-clock"></use>
                             </svg>
                         </div>
                         <h3 class="sub_title">Punctuality</h3>
@@ -71,7 +70,7 @@
                     <li class="features_item">
                         <div class="features_item_icon">
                             <svg class="features_icon" width="64" height="64">
-                                <use href="./images/symbol-defs.svg#icon-diagram-1"></use>
+                                <use href="./images/symbol-defs.svg#icon-diagram"></use>
                             </svg>
                         </div>
                         <h3 class="sub_title">Diligence</h3>
@@ -81,7 +80,7 @@
                     <li class="features_item">
                         <div class="features_item_icon">
                             <svg class="features_icon" width="64" height="64">
-                                <use href="./images/symbol-defs.svg#icon-astronaut-1"></use>
+                                <use href="./images/symbol-defs.svg#icon-astronaut"></use>
                             </svg>
                         </div>
                         <h3 class="sub_title">Technologies</h3>
@@ -120,28 +119,28 @@
                                 <li class="team_social_link">
                                     <a href="" class="social_link">
                                         <svg class="team_social_icon" width="16" height="16">
-                                            <use href="./images/symbol-defs.svg#icon-team_cards1"></use>
+                                            <use href="./images/symbol-defs.svg#icon-instagram_cards"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team_social_link">
                                     <a href="" class="social_link">
                                         <svg class="team_social_icon" width="16" height="16">
-                                            <use href="./images/symbol-defs.svg#icon-team_cards2"></use>
+                                            <use href="./images/symbol-defs.svg#icon-twitter_cards"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team_social_link">
                                     <a href="" class="social_link">
                                         <svg class="team_social_icon" width="16" height="16">
-                                            <use href="./images/symbol-defs.svg#icon-team_cards3"></use>
+                                            <use href="./images/symbol-defs.svg#icon-facebook_cards"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team_social_link">
                                     <a href="" class="social_link">
                                         <svg class="team_social_icon" width="16" height="16">
-                                            <use href="./images/symbol-defs.svg#icon-team_cards4"></use>
+                                            <use href="./images/symbol-defs.svg#icon-linkedin_cards"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -157,28 +156,28 @@
                                 <li class="team_social_link">
                                     <a href="" class="social_link">
                                         <svg class="team_social_icon" width="16" height="16">
-                                            <use href="./images/symbol-defs.svg#icon-team_cards1"></use>
+                                            <use href="./images/symbol-defs.svg#icon-instagram_cards"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team_social_link">
                                     <a href="" class="social_link">
                                         <svg class="team_social_icon" width="16" height="16">
-                                            <use href="./images/symbol-defs.svg#icon-team_cards2"></use>
+                                            <use href="./images/symbol-defs.svg#icon-twitter_cards"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team_social_link">
                                     <a href="" class="social_link">
                                         <svg class="team_social_icon" width="16" height="16">
-                                            <use href="./images/symbol-defs.svg#icon-team_cards3"></use>
+                                            <use href="./images/symbol-defs.svg#icon-facebook_cards"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team_social_link">
                                     <a href="" class="social_link">
                                         <svg class="team_social_icon" width="16" height="16">
-                                            <use href="./images/symbol-defs.svg#icon-team_cards4"></use>
+                                            <use href="./images/symbol-defs.svg#icon-linkedin_cards"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -194,28 +193,28 @@
                                 <li class="team_social_link">
                                     <a href="" class="social_link">
                                         <svg class="team_social_icon" width="16" height="16">
-                                            <use href="./images/symbol-defs.svg#icon-team_cards1"></use>
+                                            <use href="./images/symbol-defs.svg#icon-instagram_cards"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team_social_link">
                                     <a href="" class="social_link">
                                         <svg class="team_social_icon" width="16" height="16">
-                                            <use href="./images/symbol-defs.svg#icon-team_cards2"></use>
+                                            <use href="./images/symbol-defs.svg#icon-twitter_cards"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team_social_link">
                                     <a href="" class="social_link">
                                         <svg class="team_social_icon" width="16" height="16">
-                                            <use href="./images/symbol-defs.svg#icon-team_cards3"></use>
+                                            <use href="./images/symbol-defs.svg#icon-facebook_cards"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team_social_link">
                                     <a href="" class="social_link">
                                         <svg class="team_social_icon" width="16" height="16">
-                                            <use href="./images/symbol-defs.svg#icon-team_cards4"></use>
+                                            <use href="./images/symbol-defs.svg#icon-linkedin_cards"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -231,28 +230,28 @@
                                 <li class="team_social_link">
                                     <a href="" class="social_link">
                                         <svg class="team_social_icon" width="16" height="16">
-                                            <use href="./images/symbol-defs.svg#icon-team_cards1"></use>
+                                            <use href="./images/symbol-defs.svg#icon-instagram_cards"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team_social_link">
                                     <a href="" class="social_link">
                                         <svg class="team_social_icon" width="16" height="16">
-                                            <use href="./images/symbol-defs.svg#icon-team_cards2"></use>
+                                            <use href="./images/symbol-defs.svg#icon-twitter_cards"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team_social_link">
                                     <a href="" class="social_link">
                                         <svg class="team_social_icon" width="16" height="16">
-                                            <use href="./images/symbol-defs.svg#icon-team_cards3"></use>
+                                            <use href="./images/symbol-defs.svg#icon-facebook_cards"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team_social_link">
                                     <a href="" class="social_link">
                                         <svg class="team_social_icon" width="16" height="16">
-                                            <use href="./images/symbol-defs.svg#icon-team_cards4"></use>
+                                            <use href="./images/symbol-defs.svg#icon-linkedin_cards"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -269,42 +268,42 @@
                     <li class="customers_item">
                         <a href="" class="customers_link">
                             <svg class="customers_icon" width="104" height="56">
-                                <use href="./images/symbol-defs.svg#icon-costumer1"></use>
+                                <use href="./images/symbol-defs.svg#icon-Logo1"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="customers_item">
                         <a href="" class="customers_link">
                             <svg class="customers_icon" width="104" height="56">
-                                <use href="./images/symbol-defs.svg#icon-costumer2"></use>
+                                <use href="./images/symbol-defs.svg#icon-Logo2"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="customers_item">
                         <a href="" class="customers_link">
                             <svg class="customers_icon" width="104" height="56">
-                                <use href="./images/symbol-defs.svg#icon-costumer3"></use>
+                                <use href="./images/symbol-defs.svg#icon-Logo3"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="customers_item">
                         <a href="" class="customers_link">
                         <svg class="customers_icon" width="104" height="56">
-                            <use href="./images/symbol-defs.svg#icon-costumer4"></use>
+                            <use href="./images/symbol-defs.svg#icon-Logo4"></use>
                         </svg>
                     </a>
                     </li>
                     <li class="customers_item">
                         <a href="" class="customers_link">
                             <svg class="customers_icon" width="104" height="56">
-                                <use href="./images/symbol-defs.svg#icon-costumer5"></use>
+                                <use href="./images/symbol-defs.svg#icon-Logo5"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="customers_item">
                         <a href="" class="customers_link">
                             <svg class="customers_icon" width="104" height="56">
-                                <use href="./images/symbol-defs.svg#icon-costumer6"></use>
+                                <use href="./images/symbol-defs.svg#icon-Logo6"></use>
                             </svg>
                         </a>
                     </li>
@@ -326,28 +325,28 @@
                     <li class="social_media_item">
                         <a href="" class="social_media_link">
                             <svg width="24" height="24">
-                                <use href="./images/symbol-defs.svg#icon-footer_instagram"></use>
+                                <use href="./images/symbol-defs.svg#icon-instagram_footer"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="social_media_item">
                         <a href="" class="social_media_link">
                             <svg width="24" height="24">
-                                <use href="./images/symbol-defs.svg#icon-footer_twitter"></use>
+                                <use href="./images/symbol-defs.svg#icon-twitter_footer"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="social_media_item">
                         <a href="" class="social_media_link">
                             <svg width="24" height="24">
-                                <use href="./images/symbol-defs.svg#icon-footer_facebook"></use>
+                                <use href="./images/symbol-defs.svg#icon-facebook_footer"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="social_media_item">
                         <a href="" class="social_media_link">
                             <svg width="24" height="24">
-                                <use href="./images/symbol-defs.svg#icon-footer_linkedin"></use>
+                                <use href="./images/symbol-defs.svg#icon-linkedin_footer"></use>
                             </svg>
                         </a>
                     </li>
