--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
-    <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
     <title>Portfolio</title>
 </head>
@@ -112,7 +111,7 @@
                                 <h2 class="sub_title">Online Courses</h2>
                                 <p class="description">Marketing</p>
                             </div >
-                        </a class="photo-item-link">
+                        </a>
                     </li>
                     <li class="photo_item">
                         <a href="" class="photo-item-link">
@@ -159,28 +158,28 @@
                     <li class="social_media_item">
                         <a href="" class="social_media_link">
                             <svg width="24" height="24">
-                                <use href="./images/symbol-defs.svg#icon-footer_instagram"></use>
+                                <use href="./images/symbol-defs.svg#icon-instagram_footer"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="social_media_item">
                         <a href="" class="social_media_link">
                             <svg width="24" height="24">
-                                <use href="./images/symbol-defs.svg#icon-footer_twitter"></use>
+                                <use href="./images/symbol-defs.svg#icon-twitter_footer"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="social_media_item">
                         <a href="" class="social_media_link">
                             <svg width="24" height="24">
-                                <use href="./images/symbol-defs.svg#icon-footer_facebook"></use>
+                                <use href="./images/symbol-defs.svg#icon-facebook_footer"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="social_media_item">
                         <a href="" class="social_media_link">
                             <svg width="24" height="24">
-                                <use href="./images/symbol-defs.svg#icon-footer_linkedin"></use>
+                                <use href="./images/symbol-defs.svg#icon-linkedin_footer"></use>
                             </svg>
                         </a>
                     </li>
@@ -188,7 +187,5 @@
             </div>
         </div>
     </footer>
-</body>
-</html>
 </body>
 </html>
