nav links border

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 </a>
                 <ul class="header_list">
                     <li class="header_item">
-                        <a href="./index.html" class="header_links">Studio</a>
+                        <a href="./index.html" class="header_links active">Studio</a>
                     </li>
                     <li class="header_item">
                         <a href="./portfolio.html" class="header_links">Portfolio</a>
