--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
                         <a href="./index.html" class="header_links">Studio</a>
                     </li>
                     <li class="header_item">
-                        <a href="./portfolio.html" class="header_links">Portfolio</a>
+                        <a href="./portfolio.html" class="header_links active">Portfolio</a>
                     </li>
                     <li class="header_item">
                         <a href="#" class="header_links">Contacts</a>
