fixed seventh photo

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <section class="hero">
             <div class="container">
                 <h1 class="hero_title">Effective Solutions for Your Business</h1>
-                <button type="button" class="button">Order Service</button>
+                <button type="button" class="order_button button" data-modal-open>Order Service</button>
             </div>
         </section>
         <section class="features">
@@ -354,5 +354,15 @@
             </div>
         </div>
     </footer>
+    <div class="backdrop is-hidden" data-modal>
+        <div class="modal">
+            <button type="button" class="modal_close_btn" data-modal-close>
+                <svg class="modal_close_btn_icon" width="8" height="8">
+                    <use href="./images/symbol-defs.svg#icon-modal_close"></use>
+                </svg>
+            </button>
+        </div>
+    </div>
+    <script src="./js/modal.js"></script>
 </body>
 </html>
