--- a/portfolio.html
+++ b/portfolio.html
@@ -59,8 +59,20 @@
                 </ul>
                 <ul class="photo_list">
                     <li class="photo_item">
-                        <a href="" class="photo-item-link">
-                            <img src="./images/portfolio_cards/img1.jpg" alt="banking">
+                        <a href="" class="photo_item_link">
+                            <div class="photo_item_wrapper">
+                                <img src="./images/portfolio_cards/img1.jpg"
+                                alt="Courses" 
+                                width="360" 
+                                height="300" 
+                                class="no-gap"
+                                />
+                                <p class="overlay">
+                                    14 Stylish and User-Friendly App Design Concepts · Task
+                                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                                    App · Cloud Storage App
+                                </p>
+                            </div >
                             <div class="photo_notes">
                                 <h2 class="sub_title">Banking App Interface Concept</h2>
                                 <p class="description">App</p>
@@ -68,8 +80,20 @@
                         </a >
                     </li>
                     <li class="photo_item">
-                        <a href="" class="photo-item-link">
-                            <img src="./images/portfolio_cards/img2.jpg" alt="payment" width="360" height="300" class="no-gap">
+                        <a href="" class="photo_item_link">
+                            <div class="photo_item_wrapper">
+                                <img src="./images/portfolio_cards/img2.jpg"
+                                alt="Courses" 
+                                width="360" 
+                                height="300" 
+                                class="no-gap"
+                                />
+                                <p class="overlay">
+                                    14 Stylish and User-Friendly App Design Concepts · Task
+                                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                                    App · Cloud Storage App
+                                </p>
+                            </div >
                             <div class="photo_notes">
                                 <h2 class="sub_title">Cashless Payment</h2>
                                 <p class="description">Marketing</p>
@@ -77,8 +101,20 @@
                         </a>
                     </li>
                     <li class="photo_item">
-                        <a href="" class="photo-item-link">
-                            <img src="./images/portfolio_cards/img3.jpg" alt="meditation" width="360" height="300" class="no-gap">
+                        <a href="" class="photo_item_link">
+                            <div class="photo_item_wrapper">
+                                <img src="./images/portfolio_cards/img3.jpg"
+                                alt="Courses" 
+                                width="360" 
+                                height="300" 
+                                class="no-gap"
+                                />
+                                <p class="overlay">
+                                    14 Stylish and User-Friendly App Design Concepts · Task
+                                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                                    App · Cloud Storage App
+                                </p>
+                            </div >
                             <div class="photo_notes">
                                 <h2 class="sub_title">Meditaion App</h2>
                                 <p class="description">App</p>
@@ -86,8 +122,20 @@
                         </a>
                     </li>
                     <li class="photo_item">
-                        <a href="" class="photo-item-link">
-                            <img src="./images/portfolio_cards/img4.jpg" alt="taxi" width="360" height="300" class="no-gap">
+                        <a href="" class="photo_item_link">
+                            <div class="photo_item_wrapper">
+                                <img src="./images/portfolio_cards/img4.jpg"
+                                alt="Courses" 
+                                width="360" 
+                                height="300" 
+                                class="no-gap"
+                                />
+                                <p class="overlay">
+                                    14 Stylish and User-Friendly App Design Concepts · Task
+                                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                                    App · Cloud Storage App
+                                </p>
+                            </div >
                             <div class="photo_notes">
                                 <h2 class="sub_title">Taxi Service</h2>
                                 <p class="description">Marketing</p>
@@ -95,9 +143,20 @@
                         </a>
                     </li>
                     <li class="photo_item">
-                        <a href="" class="photo-item-link">
-                            <img src="./images/portfolio_cards/img5.jpg" alt="illustrations" width="360" height="300"
-                            class="no-gap">
+                        <a href="" class="photo_item_link">
+                            <div class="photo_item_wrapper">
+                                <img src="./images/portfolio_cards/img5.jpg"
+                                alt="Courses" 
+                                width="360" 
+                                height="300" 
+                                class="no-gap"
+                                />
+                                <p class="overlay">
+                                    14 Stylish and User-Friendly App Design Concepts · Task
+                                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                                    App · Cloud Storage App
+                                </p>
+                            </div >
                             <div class="photo_notes">
                                 <h2 class="sub_title">Screen Illustrations</h2>
                                 <p class="description">Design</p>
@@ -105,8 +164,20 @@
                         </a>
                     </li>
                     <li class="photo_item">
-                        <a href="" class="photo-item-link">
-                            <img src="./images/portfolio_cards/img6.jpg" alt="Courses" width="360" height="300" class="no-gap">
+                        <a href="" class="photo_item_link">
+                            <div class="photo_item_wrapper">
+                                <img src="./images/portfolio_cards/img6.jpg"
+                                alt="Courses" 
+                                width="360" 
+                                height="300" 
+                                class="no-gap"
+                                />
+                                <p class="overlay">
+                                    14 Stylish and User-Friendly App Design Concepts · Task
+                                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                                    App · Cloud Storage App
+                                </p>
+                            </div >
                             <div class="photo_notes">
                                 <h2 class="sub_title">Online Courses</h2>
                                 <p class="description">Marketing</p>
@@ -114,8 +185,21 @@
                         </a>
                     </li>
                     <li class="photo_item">
-                        <a href="" class="photo-item-link">
-                            <img src="./images/portfolio_cards/img7.jpg" alt="instagram" width="360" height="300" class="no-gap">
+                        <a href="" class="photo_item_link">
+                            <a href="" class="photo_item_link">
+                                <div class="photo_item_wrapper">
+                                    <img src="./images/portfolio_cards/img7.jpg"
+                                    alt="Courses" 
+                                    width="360" 
+                                    height="300" 
+                                    class="no-gap"
+                                    />
+                                    <p class="overlay">
+                                        14 Stylish and User-Friendly App Design Concepts · Task
+                                        Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                                        App · Cloud Storage App
+                                    </p>
+                                </div >
                             <div class="photo_notes">
                                 <h2 class="sub_title">Instagram Stories Concept</h2>
                                 <p class="description">Design</p>
@@ -123,8 +207,20 @@
                         </a>
                     </li>
                     <li class="photo_item">
-                        <a href="" class="photo-item-link">
-                            <img src="./images/portfolio_cards/img8.jpg" alt="food" width="360" height="300" class="no-gap">
+                        <a href="" class="photo_item_link">
+                            <div class="photo_item_wrapper">
+                                <img src="./images/portfolio_cards/img8.jpg"
+                                alt="Courses" 
+                                width="360" 
+                                height="300" 
+                                class="no-gap"
+                                />
+                                <p class="overlay">
+                                    14 Stylish and User-Friendly App Design Concepts · Task
+                                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                                    App · Cloud Storage App
+                                </p>
+                            </div >
                             <div class="photo_notes">
                                 <h2 class="sub_title">Organic Food</h2>
                                 <p class="description">Web Site</p>
@@ -132,8 +228,20 @@
                         </a >
                     </li>
                     <li class="photo_item">
-                        <a href="" class="photo-item-link">
-                            <img src="./images/portfolio_cards/img9.jpg" alt="coffee" width="360" height="300" class="no-gap">
+                        <a href="" class="photo_item_link">
+                            <div class="photo_item_wrapper">
+                                <img src="./images/portfolio_cards/img9.jpg"
+                                alt="Courses" 
+                                width="360" 
+                                height="300" 
+                                class="no-gap"
+                                />
+                                <p class="overlay">
+                                    14 Stylish and User-Friendly App Design Concepts · Task
+                                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                                    App · Cloud Storage App
+                                </p>
+                            </div >
                             <div class="photo_notes">
                                 <h2 class="sub_title">Fresh Coffee</h2>
                                 <p class="description">Web Site</p>
